--- a/OccludedLibrary/OccludedLibrary.vcxproj
+++ b/OccludedLibrary/OccludedLibrary.vcxproj
@@ -124,6 +124,7 @@
     <ClInclude Include="buffers\attributes\attribute_map.h" />
     <ClInclude Include="buffers\attributes\attribute.h" />
     <ClInclude Include="buffers\interleaved_attr_buffer.h" />
+    <ClInclude Include="utilities\files\file_reader.h" />
     <ClInclude Include="opengl\retained\gl_attribute_buffer.h" />
     <ClInclude Include="opengl\retained\shaders\shader.h" />
     <ClInclude Include="resource.h" />
@@ -136,6 +137,7 @@
     <ClCompile Include="buffers\attributes\attribute_map.cpp" />
     <ClCompile Include="buffers\attributes\attribute.cpp" />
     <ClCompile Include="buffers\interleaved_attr_buffer.cpp" />
+    <ClCompile Include="utilities\files\file_reader.cpp" />
     <ClCompile Include="opengl\retained\gl_attribute_buffer.cpp" />
     <ClCompile Include="opengl\retained\shaders\shader.cpp" />
     <ClCompile Include="opengl\retained\shaders\shader_program.cpp" />
