--- a/OccludedLibraryUnitTests/OccludedLibraryUnitTests/OccludedLibraryUnitTests.vcxproj
+++ b/OccludedLibraryUnitTests/OccludedLibraryUnitTests/OccludedLibraryUnitTests.vcxproj
@@ -21,7 +21,8 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{5F87ACC5-3546-4CB5-96EB-BB73F0E82AB6}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>OccludedLibraryTest</RootNamespace>
+    <RootNamespace>OccludedLibraryUnitTests</RootNamespace>
+    <ProjectName>OccludedLibraryUnitTests</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -102,22 +103,21 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>E:\Libraries\glew\glew-1.10.0\include;E:\Libraries\boost\boost_1_55_0;E:\Libraries\SDL\SDL2-2.0.3\include;E:\Development\PublicProjects\Libraries\OccludedLibrary\OccludedLibrary;$(VCInstallDir)UnitTest\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\Libraries\glew\glew-1.10.0\include;E:\Libraries\boost\boost_1_55_0;E:\Development\PublicProjects\Libraries\OccludedLibrary\OccludedLibrary;$(VCInstallDir)UnitTest\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>E:\Libraries\SDL\SDL2-2.0.3\lib\x64;E:\Libraries\glew\glew-1.10.0\lib\Release\x64;E:\Development\PublicProjects\Libraries\OccludedLibrary\OccludedLibrary\x64\Debug;$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>E:\Libraries\glew\glew-1.10.0\lib\Release\x64;E:\Development\PublicProjects\Libraries\OccludedLibrary\OccludedLibrary\x64\Debug;$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>if not exist $(SolutionDir)$(Platform)\$(Configuration)\glew32.dll copy E:\Libraries\glew\glew-1.10.0\bin\Release\x64\glew32.dll $(SolutionDir)$(Platform)\$(Congifuration)\</Command>
     </PostBuildEvent>
     <PostBuildEvent>
-      <Command>if not exist $(SolutionDir)$(Platform)\$(Configuration)\glew32.dll copy E:\Libraries\glew\glew-1.10.0\bin\Release\x64 $(SolutionDir)$(Platform)\$(Congifuration)\
-if not exist $(SolutionDir)$(Platform)\$(Configuration)\SDL2.dll copy E:\Libraries\SDL\SDL2-2.0.3\lib\x64\SDL2.dll $(SolutionDir)$(Platform)\$(Configuration)\</Command>
+      <Command>if not exist $(SolutionDir)$(Platform)\$(Configuration)\glew32.dll copy E:\Libraries\glew\glew-1.10.0\bin\Release\x64 $(SolutionDir)$(Platform)\$(Congifuration)\</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -165,6 +165,7 @@ if not exist $(SolutionDir)$(Platform)\$(Configuration)\SDL2.dll copy E:\Librari
   <ItemGroup>
     <ClCompile Include="attribute_buffer_factory_test.cpp" />
     <ClCompile Include="attribute_buffer_test.cpp" />
+    <ClCompile Include="file_reader_test.cpp" />
     <ClCompile Include="interleaved_attr_buffer_test.cpp" />
     <ClCompile Include="segregated_attr_buffer_test.cpp" />
     <ClCompile Include="attribute_map_test.cpp" />
