--- a/OccludedLibraryUnitTests/OccludedLibraryUnitTests/OccludedLibraryUnitTests.vcxproj.filters
+++ b/OccludedLibraryUnitTests/OccludedLibraryUnitTests/OccludedLibraryUnitTests.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="mock\opengl_mock.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="file_reader_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="shader_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
