--- a/OccludedLibraryUnitTests/OccludedLibraryUnitTests/OccludedLibraryUnitTests.vcxproj
+++ b/OccludedLibraryUnitTests/OccludedLibraryUnitTests/OccludedLibraryUnitTests.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="segregated_attr_buffer_test.cpp" />
     <ClCompile Include="attribute_map_test.cpp" />
     <ClCompile Include="attribute_test.cpp" />
+    <ClCompile Include="shader_program_test.cpp" />
     <ClCompile Include="shader_test.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
