--- a/OccludedLibraryUnitTests/OccludedLibraryUnitTests/OccludedLibraryUnitTests.vcxproj
+++ b/OccludedLibraryUnitTests/OccludedLibraryUnitTests/OccludedLibraryUnitTests.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="shader_attribute_map_test.cpp" />
     <ClCompile Include="shader_program_test.cpp" />
     <ClCompile Include="shader_test.cpp" />
+    <ClCompile Include="shader_uniform_store_test.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
