--- a/OccludedLibraryUnitTests/OccludedLibraryUnitTests/OccludedLibraryUnitTests.vcxproj.filters
+++ b/OccludedLibraryUnitTests/OccludedLibraryUnitTests/OccludedLibraryUnitTests.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClCompile Include="shader_uniform_store_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gl_retained_mesh_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
