Added a get usage method to the gl_attribute_buffer class, and finalized the constructors of the gl_retained_meh class

--- a/OccludedLibrary/OccludedLibrary.vcxproj
+++ b/OccludedLibrary/OccludedLibrary.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="buffers\attributes\attribute_map.h" />
     <ClInclude Include="buffers\attributes\attribute.h" />
     <ClInclude Include="buffers\interleaved_attr_buffer.h" />
+    <ClInclude Include="meshes\mesh.h" />
     <ClInclude Include="opengl\retained\gl_retained_mesh.h" />
     <ClInclude Include="opengl\retained\shaders\shader_attribute_map.h" />
     <ClInclude Include="opengl\retained\shaders\shader_uniform_store.h" />
