--- a/OccludedLibraryUnitTests/OccludedLibraryUnitTests/OccludedLibraryUnitTests.vcxproj
+++ b/OccludedLibraryUnitTests/OccludedLibraryUnitTests/OccludedLibraryUnitTests.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="attribute_buffer_factory_test.cpp" />
     <ClCompile Include="attribute_buffer_test.cpp" />
     <ClCompile Include="file_reader_test.cpp" />
+    <ClCompile Include="fixed_gl_camera_test.cpp" />
     <ClCompile Include="gl_attribute_buffer_test.cpp" />
     <ClCompile Include="gl_retained_mesh_test.cpp" />
     <ClCompile Include="interleaved_attr_buffer_test.cpp" />
