Added camera, gl_retained_camera, and fixed_gl_camera classes. Refactored shader_program and shader_uniform_store classes.

--- a/OccludedLibraryUnitTests/OccludedLibraryUnitTests/OccludedLibraryUnitTests.vcxproj
+++ b/OccludedLibraryUnitTests/OccludedLibraryUnitTests/OccludedLibraryUnitTests.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="file_reader_test.cpp" />
     <ClCompile Include="fixed_gl_camera_test.cpp" />
     <ClCompile Include="gl_attribute_buffer_test.cpp" />
+    <ClCompile Include="gl_retained_camera_test.cpp" />
     <ClCompile Include="gl_retained_mesh_test.cpp" />
     <ClCompile Include="interleaved_attr_buffer_test.cpp" />
     <ClCompile Include="segregated_attr_buffer_test.cpp" />
